--- a/index.html
+++ b/index.html
@@ -250,13 +250,13 @@
                                 <ul class="list clearfix">
                                     <li>
                                        <div class="icon-box"><i class="flaticon-laboratory-1"></i></div>
-                                       <h3>29+</h3> 
-                                       <h4>Models</h4>
+                                       <h3>10+</h3> 
+                                       <h4>Human hippocampus dataset </h4>
                                     </li>
                                     <li>
                                        <div class="icon-box"><i class="flaticon-laboratory"></i></div>
-                                       <h3>40+</h3> 
-                                       <h4>Data Storage (TRB)</h4>
+                                       <h3>51+</h3> 
+                                       <h4>Electrophysiological data</h4>
                                     </li>
                                 </ul>
                                 <div class="btn-box">
@@ -277,13 +277,13 @@
                                 <ul class="list clearfix">
                                     <li>
                                        <div class="icon-box"><i class="flaticon-laboratory-1"></i></div>
-                                       <h3>51+</h3> 
-                                       <h4>Electrophysiological data</h4>
+                                       <h3>40+</h3> 
+                                       <h4>Data Storage (TRB)</h4>
                                     </li>
                                     <li>
                                        <div class="icon-box"><i class="flaticon-laboratory"></i></div>
-                                       <h3>55+</h3> 
-                                       <h4>Drug-resistant epileptic data</h4>
+                                       <h3>24</h3> 
+                                       <h4>Nodes for standard and cloud data processing</h4>
                                     </li>
                                 </ul>
                                 <div class="btn-box">
@@ -300,7 +300,7 @@
                             <div class="content-inner">
                                 <span class="count-text"></span>
                                 <h5>Features and innovations</h5>
-                                <h2>Brain-inspired Data Analysis and Tools</h2>
+                                <h2>Brain-inspired Models, Analysis and Tools</h2>
                                 <ul class="list clearfix">
                                     <li>
                                        <div class="icon-box"><i class="flaticon-laboratory-1"></i></div>
@@ -309,8 +309,8 @@
                                     </li>
                                     <li>
                                        <div class="icon-box"><i class="flaticon-laboratory"></i></div>
-                                       <h3>10+</h3> 
-                                       <h4>Human hippocampus dataset </h4>
+                                       <h3>29+</h3> 
+                                       <h4>Models</h4>
                                     </li>
                                 </ul>
                                 <div class="btn-box">
@@ -337,7 +337,7 @@
                                     <li>
                                        <div class="icon-box"><i class="flaticon-laboratory"></i></div>
                                        <h3>12+</h3> 
-                                       <h4>Italian cities</h4>
+                                       <h4> Centers</h4>
                                     </li>
                                 </ul>
                                 <div class="btn-box">
@@ -362,7 +362,7 @@
                                 <div class="shape shape-2 hexagon_shape"></div>
                             </div>
                             <div class="image-inner hexagon_shape">
-                                <figure class="image"><img src="assets/images/resource/about-1.png" alt=""></figure>
+                                <figure class="image"><img src="assets/images/resource/about-2.png" alt=""></figure>
                             </div>
                             <div class="text">
                                 <div class="inner">
@@ -426,7 +426,7 @@
             <div class="auto-container">
                 <div class="sec-title">
                     <span class="sub-title">What We offer</span>
-                    <h2>Neuroscientific resources and services</h2>
+                    <h2>Resources and services for neuroscience</h2>
                 </div>
                 <div class="three-item-carousel owl-carousel owl-theme owl-dots-none nav-style-one">
                     <div class="service-block-one">
@@ -537,6 +537,7 @@
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 col-sm-12 industries-block">
+                            <a href="index.html" class="industries-block-link">
                                 <div class="industries-block-one">
                                     <div class="inner-box">
                                         <div class="icon-box">
@@ -549,8 +550,10 @@
                                         </div>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                             <div class="col-lg-3 col-md-6 col-sm-12 industries-block">
+                            <a href="index.html" class="industries-block-link">
                                 <div class="industries-block-one">
                                     <div class="inner-box">
                                         <div class="icon-box">
@@ -563,8 +566,10 @@
                                         </div>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                             <div class="col-lg-3 col-md-6 col-sm-12 industries-block">
+                            <a href="index.html" class="industries-block-link">
                                 <div class="industries-block-one">
                                     <div class="inner-box">
                                         <div class="icon-box">
@@ -577,6 +582,7 @@
                                         </div>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                             <div class="col-lg-6 col-md-12 col-sm-12 title-column">
                                 <div class="sec-title mr-0 light">
@@ -585,6 +591,7 @@
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 col-sm-12 industries-block">
+                            <a href="index.html" class="industries-block-link">
                                 <div class="industries-block-one">
                                     <div class="inner-box">
                                         <div class="icon-box">
@@ -597,8 +604,10 @@
                                         </div>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                             <div class="col-lg-3 col-md-6 col-sm-12 industries-block">
+                            <a href="index.html" class="industries-block-link">
                                 <div class="industries-block-one">
                                     <div class="inner-box">
                                         <div class="icon-box">
@@ -606,12 +615,13 @@
                                         
                                         </div>
                                         <h3><a href="index.html"> Other diseases </a></h3>
-                                        <p> </p>
+                                        <p> Study mechanisms and treatments for various neurological disorders.</p>
                                         <div class="link">
                                             <a href="index.html"><i class="flaticon-right-arrow"></i></a>
                                         </div>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                         </div>
                     </div>
@@ -627,28 +637,6 @@
             <div class="auto-container">
                 <div class="testing-tab">
                     <div class="row clearfix">
-                        <div class="col-lg-4 col-md-12 col-sm-12 btn-column">
-                            <div class="tab-btn-box">
-                                <ul class="tab-btns testing-tab-btns clearfix">
-                                    <li class="p-tab-btn active-btn" data-tab="#tab-1">
-                                        <a href="index.html" class="link-btn"><i class="flaticon-right-arrow"></i></a>
-                                        <h3>Pharmaceutical</h3>
-                                    </li>
-                                    <li class="p-tab-btn active-btn" data-tab="#tab-2">
-                                        <a href="index.html" class="link-btn"><i class="flaticon-right-arrow"></i></a>
-                                        <h3>Chemistry</h3>
-                                    </li>
-                                    <li class="p-tab-btn active-btn" data-tab="#tab-3">
-                                        <a href="index.html" class="link-btn"><i class="flaticon-right-arrow"></i></a>
-                                        <h3>Clinical</h3>
-                                    </li>
-                                    <li class="p-tab-btn active-btn" data-tab="#tab-4">
-                                        <a href="index.html" class="link-btn"><i class="flaticon-right-arrow"></i></a>
-                                        <h3>Others</h3>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
                         <div class="col-lg-8 col-md-12 col-sm-12 content-column">
                             <div class="p-tabs-content">
                                 <div class="p-tab active-tab" id="tab-1">
@@ -669,46 +657,33 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col-lg-4 col-md-12 col-sm-12 btn-column">
+                            <div class="tab-btn-box">
+                                <ul class="tab-btns testing-tab-btns clearfix">
+                                    <li class="p-tab-btn active-btn" data-tab="#tab-1">
+                                        <a href="index.html" class="link-btn"><i class="flaticon-left-arrow" style="float: right;"></i></a>
+                                        <h3>Pharmaceutical</h3>
+                                    </li>
+                                    <li class="p-tab-btn active-btn" data-tab="#tab-2">
+                                        <a href="index.html" class="link-btn"><i class="flaticon-left-arrow" style="float: right;"></i></a>
+                                        <h3>Chemistry</h3>
+                                    </li>
+                                    <li class="p-tab-btn active-btn" data-tab="#tab-3">
+                                        <a href="index.html" class="link-btn"><i class="flaticon-left-arrow" style="float: right;"></i></a>
+                                        <h3>Clinical</h3>
+                                    </li>
+                                    <li class="p-tab-btn active-btn" data-tab="#tab-4">
+                                        <a href="index.html" class="link-btn"><i class="flaticon-left-arrow" style="float: right;"></i></a>
+                                        <h3>Others</h3>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- testing-section end -->
-
- <!-- THIS IS NOT GOING ANYMORE
-         excellence-section 
-        <section class="excellence-section">
-            <div class="auto-container">
-                <div class="row align-items-center clearfix">
-                    <div class="col-lg-6 col-md-12 col-sm-12 image-column">
-                        <div class="image-box">
-                            <figure class="image"><img src="assets/images/resource/Researchgroupslogos.png" alt="Research groups logos" style="object-fit: contain; width: 100%; height: 100%;"></figure>
-                            <div class="shape" style="background-image: url(assets/images/shape/shape-6.png);"></div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-md-12 col-sm-12 content-column">
-                        <div class="content-box">
-                            <div class="sec-title">
-                                <span class="sub-title">Research Groups</span>
-                                <h2>Excellence is our specialty</h2>
-                            </div>
-                            <div class="inner-box">
-                                <div class="icon-box"><i class="flaticon-medical-report"></i></div>
-                                <ul class="list-style-one clearfix">
-                                    <li>Publications</li>
-                                    <li>Jobs</li>
-                                    <li>News</li>
-                                </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-         excellence-section end 
--->
-
-
 
         <!-- news-section -->
         <section class="news-section sec-pad">
@@ -752,7 +727,7 @@
                                 <div class="lower-content">
                                     <div class="category"><a href="blog-details.html">Training</a></div>
                                     <ul class="post-info clearfix">
-                                        <li>21 July, 2024</li>
+                                        <li>23-25 September, 2024</li>
                                         <li><a href="https://www.ebrains-italy.eu/news/14">By Admin</a></li>
                                     </ul>
                                     <h3><a href="https://www.ebrains-italy.eu/news/14">INCN - Italian Network for Computational Neuroscience</a></h3>
@@ -775,7 +750,7 @@
                                 <div class="lower-content">
                                     <div class="category"><a href="https://aneis.eu/">Training</a></div>
                                     <ul class="post-info clearfix">
-                                        <li>16 July, 2024</li>
+                                        <li>9-15 September, 2024</li>
                                         <li><a href="https://aneis.eu/">By Admin</a></li>
                                     </ul>
                                     <h3><a href="https://aneis.eu/">ANEIS Applied Neurosciences School</a></h3>
@@ -793,7 +768,7 @@
         </section>
         <!-- news-section end -->
 
-        
+
         <!-- funfact-section -->
         <section class="funfact-section centred">
             <div class="bg-layer" style="background-image: url(assets/images/background/fun-fact2.png);"></div>
@@ -842,7 +817,6 @@
             </div>
         </section>
         <!-- funfact-section end -->
-
 
 
         <!-- main-footer -->
