--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                                 <div class="shape shape-2 hexagon_shape"></div>
                             </div>
                             <div class="image-inner hexagon_shape">
-                                <figure class="image"><img src="assets/images/resource/about-2.png" alt=""></figure>
+                                <figure class="image"><img src="assets/images/resource/about-1.png" alt=""></figure>
                             </div>
                             <div class="text">
                                 <div class="inner">
@@ -630,60 +630,59 @@
         </section>
         <!-- industries-section end -->
 
-
-        <!-- testing-section -->
-        <section class="testing-section">
-            <div class="bg-layer" style="background-image: url(assets/images/background/testing-bg.jpeg);"></div>
-            <div class="auto-container">
-                <div class="testing-tab">
-                    <div class="row clearfix">
-                        <div class="col-lg-8 col-md-12 col-sm-12 content-column">
-                            <div class="p-tabs-content">
-                                <div class="p-tab active-tab" id="tab-1">
-                                    <div class="content-box">
-                                        <div class="inner-box">
-                                            <div class="sec-title light">
-                                                <span class="sub-title">Industries</span>
-                                                <h2>Cost and time optimization</h2>
-                                            </div>
-                                            <div class="text">
-                                                <p></p>
-                                            </div>
-                                            <div class="btn-box">
-                                                <a href="index.html" class="theme-btn light">Read More</a>
-                                            </div>
+       <!-- testing-section -->
+       <section class="testing-section">
+        <div class="bg-layer" style="background-image: url(assets/images/background/testing-bg.jpeg);"></div>
+        <div class="auto-container">
+            <div class="testing-tab">
+                <div class="row clearfix">
+                    <div class="col-lg-4 col-md-12 col-sm-12 btn-column">
+                        <div class="tab-btn-box">
+                            <ul class="tab-btns testing-tab-btns clearfix">
+                                <li class="p-tab-btn active-btn" data-tab="#tab-1">
+                                    <a href="index.html" class="link-btn"><i class="flaticon-right-arrow"></i></a>
+                                    <h3>Pharmaceutical</h3>
+                                </li>
+                                <li class="p-tab-btn active-btn" data-tab="#tab-2">
+                                    <a href="index.html" class="link-btn"><i class="flaticon-right-arrow"></i></a>
+                                    <h3>Chemistry</h3>
+                                </li>
+                                <li class="p-tab-btn active-btn" data-tab="#tab-3">
+                                    <a href="index.html" class="link-btn"><i class="flaticon-right-arrow"></i></a>
+                                    <h3>Clinical</h3>
+                                </li>
+                                <li class="p-tab-btn active-btn" data-tab="#tab-4">
+                                    <a href="index.html" class="link-btn"><i class="flaticon-right-arrow"></i></a>
+                                    <h3>Others</h3>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-8 col-md-12 col-sm-12 content-column">
+                        <div class="p-tabs-content">
+                            <div class="p-tab active-tab" id="tab-1">
+                                <div class="content-box">
+                                    <div class="inner-box">
+                                        <div class="sec-title light">
+                                            <span class="sub-title">Industries</span>
+                                            <h2>Cost and time optimization</h2>
+                                        </div>
+                                        <div class="text">
+                                            <p></p>
+                                        </div>
+                                        <div class="btn-box">
+                                            <a href="index.html" class="theme-btn light">Read More</a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-12 col-sm-12 btn-column">
-                            <div class="tab-btn-box">
-                                <ul class="tab-btns testing-tab-btns clearfix">
-                                    <li class="p-tab-btn active-btn" data-tab="#tab-1">
-                                        <a href="index.html" class="link-btn"><i class="flaticon-left-arrow" style="float: right;"></i></a>
-                                        <h3>Pharmaceutical</h3>
-                                    </li>
-                                    <li class="p-tab-btn active-btn" data-tab="#tab-2">
-                                        <a href="index.html" class="link-btn"><i class="flaticon-left-arrow" style="float: right;"></i></a>
-                                        <h3>Chemistry</h3>
-                                    </li>
-                                    <li class="p-tab-btn active-btn" data-tab="#tab-3">
-                                        <a href="index.html" class="link-btn"><i class="flaticon-left-arrow" style="float: right;"></i></a>
-                                        <h3>Clinical</h3>
-                                    </li>
-                                    <li class="p-tab-btn active-btn" data-tab="#tab-4">
-                                        <a href="index.html" class="link-btn"><i class="flaticon-left-arrow" style="float: right;"></i></a>
-                                        <h3>Others</h3>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- testing-section end -->
+        </div>
+    </section>
+    <!-- testing-section end -->
 
         <!-- news-section -->
         <section class="news-section sec-pad">
