--- a/index.html
+++ b/index.html
@@ -130,41 +130,41 @@
                     <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                         <ul class="navigation clearfix">
                             <li><a href="index.html">Home</a></li>
-                            <li class="dropdown"><a href="index.html">About Us</a>
+                            <li class="dropdown"><a href="https://www.figma.com/proto/5cmAgpKlrrIdSyqt4gU2Cx/About-Us?page-id=0%3A1&node-id=180-314&viewport=222%2C-350%2C0.29&t=WBFKIpKAIZbCqStZ-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=180%3A314">About Us</a>
                                 <ul>
-                                    <li><a href="about.html">About Us</a></li>
-                                    <li><a href="index-3.html">Project</a></li>
-                                    <li><a href="index-3.html">Coordination team</a></li>
-                                    <li><a href="index-3.html">Partnership</a></li>
+                                    <li><a href="https://www.figma.com/proto/5cmAgpKlrrIdSyqt4gU2Cx/About-Us?page-id=0%3A1&node-id=180-314&viewport=222%2C-350%2C0.29&t=WBFKIpKAIZbCqStZ-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=180%3A314">About Us</a></li>
+                                    <li><a href="contruction.html">Project</a></li>
+                                    <li><a href="https://www.figma.com/proto/eLDEN1PdVCeX31FAaHnWK0/Coordination-Team?page-id=0%3A1&node-id=225-2&node-type=FRAME&viewport=-106%2C-718%2C0.35&t=fNGL4l01N2GmGOI8-1&scaling=min-zoom&content-scaling=fixed">Coordination team</a></li>
+                                    <li><a href="https://www.figma.com/proto/AOuwY5VLZjYkTiI0TLsYHy/Partnership?page-id=0%3A1&node-id=5-697&viewport=-175%2C-460%2C0.61&t=kz6SHAhxoVObWOjo-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=5%3A697">Partnership</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown"><a href="index.html">Research</a>
                                 <ul>
-                                    <li><a href="about.html">Research Teams</a></li>
-                                    <li><a href="index-2.html">Publications</a></li>
+                                    <li><a href="research.html">Research Teams</a></li>
+                                    <li><a href="https://www.figma.com/proto/eLDEN1PdVCeX31FAaHnWK0/Coordination-Team?page-id=107%3A2&node-id=107-4&node-type=CANVAS&viewport=625%2C520%2C0.49&t=FfWhXvMkfNHajhRJ-1&scaling=min-zoom&content-scaling=fixed">Publications</a></li>
                                 </ul>
                             </li> 
                             <li class="dropdown"><a href="index.html">Resources</a>
                                 <ul>
-                                    <li><a href="about.html">Data & Models</a></li>
-                                    <li><a href="team.html">HPC Cloud & Storage</a></li>
-                                    <li><a href="faq.html">Catalogue</a></li>
+                                    <li><a href="https://www.figma.com/proto/eLDEN1PdVCeX31FAaHnWK0/Coordination-Team?page-id=107%3A2&node-id=365-301&node-type=CANVAS&viewport=625%2C520%2C0.49&t=FfWhXvMkfNHajhRJ-1&scaling=min-zoom&content-scaling=fixed">Data & Models</a></li>
+                                    <li><a href="contruction.html">HPC Cloud & Storage</a></li>
+                                    <li><a href="contruction.html">Catalogue</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown"><a href="index.html">Services</a>
                                 <ul>
-                                    <li><a href="team.html">Facilities</a></li>
-                                    <li><a href="faq.html">Trans-National Access (TNA)</a></li>
-                                    <li class="dropdown"><a href="index.html">Training</a>
+                                    <li><a href="research.html">Facilities</a></li>
+                                    <li><a href="TNA_call.html">Trans-National Access (TNA)</a></li>
+                                    <li class="dropdown"><a href="contruction.html">Training</a>
                                         <ul>
-                                            <li><a href="shop.html">Training & Innovation Centre</a></li>
-                                            <li><a href="shop-details.html">Activities</a></li>
-                                            <li><a href="cart.html">Training Committee</a></li>
-                                            <li><a href="checkout.html">Ebrains School</a></li>
-                                            <li><a href="account.html">More Info</a></li>
+                                            <li><a href="contruction.html">Training & Innovation Centre</a></li>
+                                            <li><a href="contruction.html">Activities</a></li>
+                                            <li><a href="contruction.html">Training Committee</a></li>
+                                            <li><a href="contruction.html">Ebrains School</a></li>
+                                            <li><a href="contruction.html">More Info</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="error.html">Incubation / Acceleration </a></li>
+                                    <li><a href="contruction.html">Incubation / Acceleration </a></li>
                                 </ul>
                             </li>
                             <li class="dropdown"><a href="index.html">News & Call</a>
@@ -175,7 +175,7 @@
                                     <li><a href="service-details-3.html">Press review</a></li>
                                 </ul>
                             </li> 
-                            <li><a href="contact.html">Connect</a></li> 
+                            <li><a href="https://www.figma.com/proto/AOuwY5VLZjYkTiI0TLsYHy/Partnership?page-id=258%3A551&node-id=258-552&node-type=CANVAS&viewport=940%2C801%2C0.48&t=fd7N1mXoGkKboLgE-1&scaling=min-zoom&content-scaling=fixed">Connect</a></li> 
                         </ul>
                     </div>
                 </nav>
@@ -260,7 +260,7 @@
                                     </li>
                                 </ul>
                                 <div class="btn-box">
-                                    <a href="index.html" class="theme-btn light">Read More</a>
+                                    <a href="https://www.figma.com/proto/eLDEN1PdVCeX31FAaHnWK0/Coordination-Team?page-id=107%3A2&node-id=365-301&node-type=CANVAS&viewport=625%2C520%2C0.49&t=FfWhXvMkfNHajhRJ-1&scaling=min-zoom&content-scaling=fixed" class="theme-btn light">Read More</a>
                                 </div>
                             </div>
                         </div> 
@@ -287,7 +287,7 @@
                                     </li>
                                 </ul>
                                 <div class="btn-box">
-                                    <a href="index.html" class="theme-btn light">Read More</a>
+                                    <a href="https://ebrains-italy.eu/survey" class="theme-btn light">Read More</a>
                                 </div>
                             </div>
                         </div> 
@@ -371,18 +371,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-lg-6 col-md-12 col-sm-12 content-column">
                         <div class="content-box">
-                            <div class="sec-title">
-                                <span class="sub-title">About </span>
-                                <h2>EBRAINS - Italy: <br /> we're empowering a new era in Brain Research</h2>
-                            </div>
-                            <div class="text">
-                                <p> EBRAINS-Italy is the Italian distributed research infrastructure, which aims at enabling clinical and experimental activities in the health sector to adequately exploit the most advanced modelling, computation and data analysis technologies available in neurosciences.
-                                    EBRAINS-Italy brings together several groups with cross-sectoral competences in modelling, high performance computing and experimental/theoretical neuroscience operating in Italy, integrating their activities in order to ensure synergies and generate substantial progress in the production and dissemination of knowledge in the scientific, industrial and social fields throughout Italy. 
-                                    The results obtained by the project, in terms of know-how, multidisciplinary resources such as new and unique experimental data, instrumentation and software specific for neuroscience, advanced computational models, specialized training, and HPC resources, most of which can be used from a single access point, will strengthen the competitiveness of enterprises, and the development of new international collaborations and innovative methods for research and development.</p>
-                            </div>
                             <div class="inner-box">
                                 <div class="row clearfix">
                                     <div class="col-lg-6 col-md-6 col-sm-12 single-column">
@@ -410,6 +399,19 @@
                                         </div>
                                     </div>                                          
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-sm-12 content-column">
+                        <div class="content-box">
+                            <div class="sec-title">
+                                <span class="sub-title">About </span>
+                                <h2>EBRAINS - Italy: <br /> we're empowering a new era in Brain Research</h2>
+                            </div>
+                            <div class="text">
+                                <p> EBRAINS-Italy is the Italian distributed research infrastructure, which aims at enabling clinical and experimental activities in the health sector to adequately exploit the most advanced modelling, computation and data analysis technologies available in neurosciences.
+                                    EBRAINS-Italy brings together several groups with cross-sectoral competences in modelling, high performance computing and experimental/theoretical neuroscience operating in Italy, integrating their activities in order to ensure synergies and generate substantial progress in the production and dissemination of knowledge in the scientific, industrial and social fields throughout Italy. 
+                                    The results obtained by the project, in terms of know-how, multidisciplinary resources such as new and unique experimental data, instrumentation and software specific for neuroscience, advanced computational models, specialized training, and HPC resources, most of which can be used from a single access point, will strengthen the competitiveness of enterprises, and the development of new international collaborations and innovative methods for research and development.</p>
                             </div>
                             <div class="btn-box">
                                 <a href="about.html" class="theme-btn">Read More</a>
@@ -661,6 +663,54 @@
                     <div class="col-lg-8 col-md-12 col-sm-12 content-column">
                         <div class="p-tabs-content">
                             <div class="p-tab active-tab" id="tab-1">
+                                <div class="content-box">
+                                    <div class="inner-box">
+                                        <div class="sec-title light">
+                                            <span class="sub-title">Industries</span>
+                                            <h2>Cost and time optimization</h2>
+                                        </div>
+                                        <div class="text">
+                                            <p></p>
+                                        </div>
+                                        <div class="btn-box">
+                                            <a href="index.html" class="theme-btn light">Read More</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="p-tab" id="tab-2">
+                                <div class="content-box">
+                                    <div class="inner-box">
+                                        <div class="sec-title light">
+                                            <span class="sub-title">Industries</span>
+                                            <h2>Cost and time optimization</h2>
+                                        </div>
+                                        <div class="text">
+                                            <p></p>
+                                        </div>
+                                        <div class="btn-box">
+                                            <a href="index.html" class="theme-btn light">Read More</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="p-tab" id="tab-3">
+                                <div class="content-box">
+                                    <div class="inner-box">
+                                        <div class="sec-title light">
+                                            <span class="sub-title">Industries</span>
+                                            <h2>Cost and time optimization</h2>
+                                        </div>
+                                        <div class="text">
+                                            <p></p>
+                                        </div>
+                                        <div class="btn-box">
+                                            <a href="index.html" class="theme-btn light">Read More</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="p-tab" id="tab-4">
                                 <div class="content-box">
                                     <div class="inner-box">
                                         <div class="sec-title light">
