--- a/research.html
+++ b/research.html
@@ -338,7 +338,7 @@
         <div class="bg-layer" style="background-image: url(assets/images/background/research_teams.jpeg);"></div>
         <div class="auto-container">
             <div class="content-box">
-                <h1>Research Teams</h1>
+                <h1> Facilities</h1>
                 <ul class="bread-crumb clearfix">
                     <li><a href="index.html">Research</a></li>
                     <li>Research Teams</li>
